finished genetic report

--- a/views/charge/charge.handlebars
+++ b/views/charge/charge.handlebars
@@ -56,6 +56,8 @@
               data-zip-code="true"
               data-locale="auto"
               data-billing-address="true"
+              data-image="/assets/images/logo-new.png"
+              
               >
             </script>
             </form></td>
@@ -95,7 +97,7 @@
           <li class="list-group-item">2. SNPs of clinical relevance</li>
           <li class="list-group-item">3. Pathegenic SNPs</li>
           <li class="list-group-item">4. Your pathegenic risk per SNPs</li>
-          <li class="list-group-item">5. Nutrition and Supplementation Protocol per disease</li>
+          <li class="list-group-item">5. Lifestyle, Nutrition, and Supplementation Recommendations</li>
         </ul>
         </div>
         <div class="panel-body">
