--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
              <h1 class="main-h1"> <br><strong id="index-title">Are you looking for a retinal disease treatment?</strong></h1>
               <a href="/users/sign_up" type="submit" class="btn btn-primary" id="yes-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span> Yes</a>
               <a href="/users/no" type="submit" class="btn btn-primary" id="no-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span> No</a>
-             <h1 style="text-align: center" id="sub-main-h1"> CESARCELLS makes it easy for you to qualify for clinical trials. You take a brief assessment. Then you contact the trials. </h1>
+             <h1 style="text-align: center" id="sub-main-h1"> Effortlessly qualify for clinical trials. You take a brief assessment. Then you contact the trials. </h1>
            </div>
            <div class="col-xs- col-sm-2">
              
@@ -28,13 +28,18 @@
         </div>
       </div> 
 
-      <div class="row">
-        <div class="col-lg-12">
+      <div class="row" style="background-color: whitesmoke; height: 19%; margin-top: 10px">
+        <div class="col-xs-6 col-sm-6" style="text-align: center; margin-top: 3%; letter-spacing: 6px; word-spacing: 30px">
       
       
               {{!-- <a id="scroll-to-1"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> --}}
-          
-             
+            <h1>Share Us <span class="span-share-us" style="color: darkslategray; margin-top: 3px"> 
+             <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button_count&size=small&mobile_iframe=true&appId=1769236296667454&width=88&height=20" width="88" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe></span>      </h1>
+        </div>
+        {{!-- <div class="clearfix visible-xs-block"></div> --}}
+
+        <div class="col-xs-6 col-sm-6" style="text-align: center; margin-top: 3%; letter-spacing: 10px; word-spacing: 10px">
+          <h1>Highlight text <span class="glyphicon glyphicon-volume-up span-share-us" style="color: darkslategray; margin-top: 3px">  </span></h1><br>
         </div>
       </div>            
 {{!-- </section> --}}
@@ -294,7 +299,7 @@
 
     <div class="row">
       <div class="col-lg-12">
-      <p class="lead" style="text-align: center">Each report is just $19 and comes with a free dietary protocol complete with specific vitamin, mineral, and nutragenomic recommendations for each retinal disease. *No refunds on virtual products</p>
+      <p class="lead" style="text-align: center">Each report is just $19 and comes with a free dietary protocol complete with Lifestyle, Nutrition, and Supplementation Recommendations. *No refunds on virtual products</p>
       <a href="/users/sign-in" type="submit" class="btn btn-primary" id="buy-gene-btn-register-now" style="margin-top: 50px" > <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Yes! I want a Gene Report</a><br>
       </div>
       
