--- a/public/css/style.css
+++ b/public/css/style.css
@@ -465,7 +465,7 @@ pre {
     height: 90%;
 }
 #results-h1 {
-    margin-top: 200px;
+    margin-top: 20px;
     margin-bottom: 40px;
     text-align: center;
     font-size: 55px;
@@ -497,7 +497,7 @@ pre {
 }
 .main-h1 {
     font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 70px;
+    font-size: 65px;
     text-align: center;
     line-height: 1.3;
     color: white;
@@ -942,7 +942,7 @@ text-align: center;
     color: black;
 }
 #sub-main-h1 {
-    font-size: 29px;
+    font-size: 27px;
     color: white;
     line-height: 1.8;
     /*font-family: Circular Book;*/
@@ -984,7 +984,15 @@ text-align: center;
     margin-right: -50%;
     transform: translate(-50%, -50%)
 }
-
+#top-right-h3 {
+    width: 50%;
+    height: 50%;
+    
+}
+#top-left-h3 {
+    width: 50%;
+    height: 50%;
+}
 .what-is-header {
 
     /*margin-bottom: 10px;*/
@@ -1464,6 +1472,26 @@ text-align: center;
     border-color: deeppink;
     transition: all 0.3s ease-out;
 }
+#well-supps {
+    font-size: 22px;
+    /*padding: 38px;*/
+    width: 100%;
+    position: relative;
+    color: white;
+    background-color: deeppink;
+    border-color: deeppink;
+    transition: all 0.3s ease-out;
+    margin-bottom: 10%;
+}
+#well-supps:hover {
+    font-size: 22px;
+    /*padding: 38px;*/
+    position: relative;
+    color: deeppink;
+    background-color: white;
+    border-color: deeppink;
+    transition: all 0.3s ease-out;
+}
 #yes-btn {
      width: 20%;
      height: 10%;
@@ -1773,7 +1801,7 @@ text-align: center;
 #img-dash5 {
     margin-left: 15px;
     margin-bottom: 20px;
-    background-color: whitesmoke;
+    /*background-color: whitesmoke;*/
 }
 #img-dash4 {
     margin-left: 10px;
@@ -1784,6 +1812,19 @@ text-align: center;
 #row-btm-dash-images {
     height: 50%;
 
+}
+.dash-h3s {
+    color: black;
+    font-size: 28px;
+    font-weight: 600px;
+
+}
+.dash-h3s:hover {
+    color: deeppink;
+
+}
+.img-rounded {
+    padding: 10px;
 }
 #col-one-dash-images {
     background-color: whitesmoke;
@@ -1815,34 +1856,22 @@ h3 {
     font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
 
 }
- h3 span {
+ /*h3 span {
     color: white; 
     font: bold 24px/45px Helvetica, Sans-Serif; 
     letter-spacing: -1px;  
-    background: rgb(0, 0, 0); /* fallback color */
+    background: rgb(0, 0, 0);  fallback color 
     background: rgba(0, 0, 0, 0.7);
     padding: 10px;
     font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
 
- }
-#top-right-h3 {
-    position: absolute;
-    line-height: 1;
-    left: 370px;
-    top: 95px;
-    width: 300px;
-    background: rgb(0, 0, 0);
-    background: rgba(0, 0, 0, 0.7);
-    color: white;
-    font: bold 24px/45px;
-    letter-spacing: 0px;
-    padding: 16px;
-    font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
+ }*/
 
 
-    /* padding-left: 3px; */
-    /*height: 50px;*/
+#top-left-h3 {
+    width: 100%;
 }
+
  #top-right-span {
  }
 
@@ -3110,7 +3139,9 @@ header {
 
 /*MOBILE*/
 @media screen and (max-width: 482px) {
-  
+    #span-share-us {
+        font-size: 26px;
+    }
     .index-p {
         text-align: center;
     }
@@ -3299,18 +3330,18 @@ header {
         padding: 30px;
     }
     #top-right-h3 {
-        width: 150px;
-        left: 270px;
+        /*width: 150px;*/
+        /*left: 270px;*/
     }
     #top-left-h3 {
-        width: 150px;
-        left: 70px;
+        /*width: 150px;*/
+        /*left: 70px;*/
     }
     /****USER/DASHBOARD ENDS****/
     /****AMSLER PAGE BEGINS****/
     #amsler-grid-h1 {
         margin-top: 200px;
-        font-size: 45px;
+        font-size: 35px;
         text-align: center;
         line-height: 1;
     }
@@ -3443,6 +3474,10 @@ header {
          border-color: deeppink;
          transition: all 0.3s ease-out;
     }
+    .span-share-us {
+        font-size: 18px;
+    }
+
 }
 
 /*dashbaord ends*/
@@ -3461,6 +3496,12 @@ header {
         height: 220px;
         margin-left: 2%;
     }*/
+    #amsler-grid-h1 {
+        margin-top: 200px;
+        font-size: 39px;
+        text-align: center;
+        line-height: 1;
+    }
     #cesarcells-consent-language {
         margin-top: 40px; 
         padding: 40px; 
