--- a/views/users/assessment_results.handlebars
+++ b/views/users/assessment_results.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row" style="margin-top: 200px">
     <div class="panel-group">
       <div class="panel panel-default">
         <div class="panel-body"><h1 id="results-h1"> Your Assessment Results </h1></div>
