--- a/views/users/star_disease_reg.handlebars
+++ b/views/users/star_disease_reg.handlebars
@@ -61,6 +61,7 @@
   <p class="lead">Cesarcells.com takes your personal information very seriously.<br> Your personal health information will remain confidential and anonymous when we send it to clinics. If you are a good candidate for a future clinical trial, we will contact you to connect you with the clinic.</p>
 
   <p class="lead">Please share this website with people you know who may have an interest in retinal disease clinical trials.</p>
+  <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button_count&size=small&mobile_iframe=true&appId=1769236296667454&width=88&height=20" width="88" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 
   <p class="lead">By submitting this form you agree to our terms and conditions and to share this information with clinical trials relating to your personal health information.</p>
 
