--- a/views/charge/thankyou.handlebars
+++ b/views/charge/thankyou.handlebars
@@ -5,6 +5,7 @@
     </div> --}}
     <div class="col-sm-12 col-md-12" style="margin-top: 200px">
       <h1 id="charge-thanks">{{thanks}}</h1><br>
+      <h2>Do not press the back button or navigate away from this page!</h2>
     </div>  
     <div class="col-sm-12 col-md-12">
       
