--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -24,8 +24,8 @@
               <ul class="dropdown-menu" aria-labelledby="dLabel">
                 <li><a href="/users/stargardt-disease-registry">Stargardt Disease Registry</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="/users/my-appointments">Appointments</a></li>
-                <li role="separator" class="divider"></li>
+                {{!-- <li><a href="/users/my-appointments">Appointments</a></li>
+                <li role="separator" class="divider"></li> --}}
                 <li><a href="/tools/my-genetics">My Genetics</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/users/view-results">View Results</a></li>
