--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
     <script src="/js/scrolling-nav.js"></script>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
     <script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
-    <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+    <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
     {{!-- <link rel="stylesheet" href="http://s.mlcdn.co/animate.css"> --}}
     <script src="https://d3js.org/d3.v4.min.js"></script>
   
