--- a/views/aboutus/aboutus.handlebars
+++ b/views/aboutus/aboutus.handlebars
@@ -46,9 +46,9 @@
                     </div>
                     <div class="modal-body">
                         <h2 style="text-align: left">Vincent Porta</h2>
-                        <span>Founder</span> <br>
+                        <span>Founder and Full Stack Developer</span> <br>
                         <br>
-                        <p>Vincent is the Founder of CesarCells.com, which he founded in 2016. Vincent is responsible for the overall direction, development and strategy for the company. He spent the early part of his career learning the practice of new company formation, capital raising and strategic transactions as a co-founder of the Organic Beverage Startup Hydor Tea. He holds a degree in Criminal Justice and Pre-Medical Sciences from Rutgers University, and a Graduate Certificate from Rutgers Coding Bootcamp. Vincent was a division 3 soccer athlete at Rutgers University Newark and enjoys playing soccer and reading up on technology.</p>
+                        <p>Vincent is the Founder of CesarCells.com, which he founded in 2016. Vincent is responsible for technical development and strategy for the company. He holds a degree in Criminal Justice and Pre-Medical Sciences from Rutgers University, and a Graduate Certificate from Rutgers Coding Bootcamp. Vincent was a division 3 soccer athlete at Rutgers University Newark and enjoys playing soccer and reading up on technology.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -71,9 +71,9 @@
                     </div>
                     <div class="modal-body">
                         <h2 style="text-align: left">Pavan Katepelli</h2>
-                        <span>Advisor</span> <br>
+                        <span>Technical and Business Advisor</span> <br>
                         <br>
-                        <p>Pavan has been with CesarCells since the beginning, and has more than 5 years of experience in Web and Mobile App development. He was the Founder of INRTracker.com, software developer at Mediamath, and instructor at Barnard college and General Assembly. He is currently Chief Learning Officer at Trilogy Education Services. Pavan holds a B.S. in Mathematics from Rutgers University and is a self taught programmer</p>
+                        <p>Pavan has been with CesarCells since the beginning, and has more than 5 years of experience in Web and Mobile App development. He was the Founder of INRTracker.com, software developer at Mediamath, and instructor at Barnard college and General Assembly. He is currently Chief Learning Officer at Trilogy Education Services. Pavan holds a B.S. in Mathematics from Rutgers University and is a self taught programmer.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -96,9 +96,9 @@
                     </div>
                     <div class="modal-body">
                         <h2 style="text-align: left">Angela Gonzalez</h2>
-                        <span>Advisor</span> <br>
+                        <span>Medical Advisor</span> <br>
                         <br>
-                        <p>cebcicbiwbcbweicbwbciwbcbi</p>
+                        <p>Angela is currently a 2nd year medical student and is a graduate of TCNJ where she studied Psychology. She advises the team on determining the proper medical content, and has helped shape many of the site's features. </p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
