changed 23andme redirect_uri

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,6 @@
 {{!-- <section id="cta" class="parallax-5"> --}}
-  
       <div class="row parallax-5" id="cta">
         <div class="col-lg-12" id="wrap-main-h1">
-        
          {{!--  <h1 class="main-h1"> <br><strong id="index-title">Find a retinal disease treatment.</strong></h1>
           <h1 style="text-align: center" id="sub-main-h1"> CESARCELLS makes it easy for you to qualify for clinical trials. You take a 2 minute assessment. Then you contact the trials. </h1> --}}
          
@@ -11,6 +9,12 @@
              
            </div>
            <div class="col-xs-12 col-sm-8" style="text-align: center">
+           <div class="alert alert-info fade in" style="margin-top: 80px">
+           <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+             <strong>Attention!</strong> Cesarcells is in Beta. Report all bugs            <a href="/contact_us/contact">HERE</a>
+
+           </div>
+            
              <h1 class="main-h1"> <br><strong id="index-title">Are you looking for a retinal disease treatment?</strong></h1>
               <a href="/users/sign_up" type="submit" class="btn btn-primary" id="yes-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span> Yes</a>
               <a href="/users/no" type="submit" class="btn btn-primary" id="no-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span> No</a>
