--- a/views/tools/start_assessment.handlebars
+++ b/views/tools/start_assessment.handlebars
@@ -17,7 +17,8 @@
   <div class="row" id="start-panel-begin">
     <div class="col-md-6 col-md-offset-3">
     <h2>YOU CAN ONLY TAKE THE ASSESSMENT ONCE</h2>
-      <form method="get" action="/indexOne.html">
+    <a href="/indexOne.html">GO</a>
+      {{!-- <form method="get" action="/indexOne.html">
         <div class="form-group">
           <div class="panel panel-default">
             <div class="panel-body">
@@ -28,7 +29,7 @@
           </div>
         </div>
       </div>
-      <button type="submit" id="lets-go" class="btn btn-default">LET'S GO</button>
-      </form>
+      </form> --}}
+      <a href="/indexOne.html" id="lets-go" class="btn btn-default">LET'S GO</a>
   </div>
 </div>
