added trials to db

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,7 @@
            <div class="col-xs-12 col-sm-8" style="text-align: center">
            <div class="alert alert-info fade in" style="margin-top: 80px">
            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-             <strong>Attention!</strong> Cesarcells is in Beta. Report all bugs            <a href="/contact_us/contact">HERE</a>
+             <strong>Attention!</strong> Cesarcells is in Beta. If you'd like to sign up to be a beta-tester, go           <a href="/contact_us/contact">HERE</a>
 
            </div>
             
