--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,7 +32,7 @@
         </div>
       </div> 
 
-      <div class="row" style="background-color: whitesmoke; height: 19%; margin-top: 10px">
+      {{!-- <div class="row" style="background-color: whitesmoke; height: 19%; margin-top: 10px">
         <div class="col-xs-6 col-sm-6" style="text-align: center; margin-top: 3%; letter-spacing: 6px; word-spacing: 30px">
       
       
@@ -45,7 +45,7 @@
         <div class="col-xs-6 col-sm-6" style="text-align: center; margin-top: 3%; letter-spacing: 10px; word-spacing: 10px">
           <h1>Highlight text <span class="glyphicon glyphicon-volume-up span-share-us" style="color: darkslategray; margin-top: 3px">  </span></h1><br>
         </div>
-      </div>            
+      </div>     --}}        
 {{!-- </section> --}}
 
 <div id="part-1"></div>
