--- a/views/tools/start_assessment.handlebars
+++ b/views/tools/start_assessment.handlebars
@@ -17,8 +17,7 @@
   <div class="row" id="start-panel-begin">
     <div class="col-md-6 col-md-offset-3">
     <h2>YOU CAN ONLY TAKE THE ASSESSMENT ONCE</h2>
-    <a href="/indexOne.html">GO</a>
-      {{!-- <form method="get" action="/indexOne.html">
+    {{!-- <a href="/indexOne.html">GO</a> --}}
         <div class="form-group">
           <div class="panel panel-default">
             <div class="panel-body">
@@ -28,8 +27,7 @@
             </p>
           </div>
         </div>
-      </div>
-      </form> --}}
+  
       <a href="/indexOne.html" id="lets-go" class="btn btn-default">LET'S GO</a>
   </div>
 </div>
