--- a/views/charge/charge.handlebars
+++ b/views/charge/charge.handlebars
@@ -68,7 +68,7 @@
           </tr>
         </tfoot>
     </table>
-      <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button_count&size=small&mobile_iframe=true&appId=1769236296667454&width=88&height=20" width="88" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+      <iframe src="https://www.facebook.com/plugins/share_button.php?href=https://arcane-fortress-13823.herokuapp.com/&layout=button_count&size=small&mobile_iframe=true&appId=1769236296667454&width=88&height=20" width="88" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 
       <p class="lead">Know if you are homozygous or heterozygous for your SNPs or that of your patient’s SNPs using CesarCells Genetic Analysis! After months of research, the CESARCELLS research team has identified key SNPs which are clinically relevant in the diagnosis of retinal disease – and more importantly – which ones are not.</p>
     </div>
