--- a/views/account/support.handlebars
+++ b/views/account/support.handlebars
@@ -21,6 +21,7 @@
         <textarea type="message" class="form-control" id="messagesupport" name="messagesupport" placeholder="Enter your message to support"></textarea>
       </div>
     </div>
+    <button id="sign-in-buddy" type="submit" class="btn btn-default">Submit</button><br>
   </form>
 
   </div>
