--- a/views/account/support.handlebars
+++ b/views/account/support.handlebars
@@ -6,7 +6,7 @@
     <div class="form-group">
       <label for="name support" class="col-sm-2 control-label">Name</label>
       <div class="col-sm-10">
-        <input type="email" class="form-control" id="namesupport" name="name" placeholder="Enter Your Name">
+        <input type="text" class="form-control" id="namesupport" name="name" placeholder="Enter Your Name">
       </div>
     </div>
     <div class="form-group">
