--- a/views/account/support.handlebars
+++ b/views/account/support.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-6" id="wrap-contact-support-form">
   <h2 id="contact-support-h2">Contact Support</h2>
-  <form id="contact-support-form" class="form-horizontal form-contact-support" action="/accounts/password-update" method="POST">
+  <form id="contact-support-form" class="form-horizontal form-contact-support" action="/contact_us/send" method="POST">
   
     <div class="form-group">
       <label for="name support" class="col-sm-2 control-label">Name</label>
