--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,9 +9,9 @@
              
            </div>
            <div class="col-xs-12 col-sm-8" style="text-align: center">
-           <div class="alert alert-info fade in" style="margin-top: 80px">
+           <div class="alert alert-info fade in" style="margin-top: 80px; font-size: 20px">
            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-             <strong>Attention!</strong> Cesarcells is in Beta. Please sign up to be a beta-tester, then provide feedback      <a href="/contact_us/contact">HERE</a>
+             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><strong>      ATTENTION!</strong> This is CESARCELLS Beta. Please <a href="/users/sign_up">SIGNUP</a> to be a beta-tester, then provide feedback      <a href="/take-the-betatest-survey">HERE</a>
 
            </div>
             
@@ -139,7 +139,7 @@
 
    <div class="pages-tools">
        <header class="tools-h2"> 
-       <h2 class="how-it-works-h2-top">TOOLS 
+       <h2 class="how-it-works-h2-top">TOOLS </h2>
             <p class="lead index-page">
             
 
@@ -186,7 +186,7 @@
 
             </div>
 
-            </h2>
+            
         </header>
 
     </div>
@@ -270,14 +270,14 @@
 
          <li>      <strong id="index-title">     AND MORE!</strong></li><br>
         </ul>
-        <h2 class="sample-genereport-h2"><strong id="index-title">Gene Report</strong></h2>
+        <h2 class="sample-genereport-h2"><strong id="index-title">Gene Report     <br><br></strong><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></h2>
         <img src="/assets/images/samplereport.png" width="100%" height="100%" style="padding: 30px; -webkit-filter: blur(5px); filter: blur(5px)" class="img-rounded" id="img-genereport">
         
 
       </div>
       
       <div class="col-lg-6">
-        <h2 class="sample-genetable-h2"><strong id="index-title">Gene Table</strong></h2>
+        <h2 class="sample-genetable-h2"><strong id="index-title">Gene Table     <br><br></strong><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></h2>
 
         <img src="/assets/images/gene-table.png" width="100%" height="100%" style="padding: 30px; -webkit-filter: blur(5px); filter: blur(5px)" class="img-rounded">
         <h2 class="sample-genetable-h2"><strong id="index-title">Genetics </strong> Results Page</h2>
@@ -313,7 +313,7 @@
     <div class="row">
         <div class="col-lg-12" id="wrap-bottom-index">
         <h1 class="avail-trials-h1">Get Started Finding Your <strong id="index-title">Clinical Trial </strong></h1>
-            <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn-register-now"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a>
+            <a href="/users/sign_up" type="submit" class="btn btn-primary" id="main-btn-register-now"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a>
       
     </div>
          
