--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -28,6 +28,8 @@
                 <li><a href="/stargardts-glossary">Glossary</a></li>
                 {{!-- <li role="separator" class="divider"></li>
                 <li><a href="/stargardts-stemcell-story">Inspiring story of Cesar</a></li> --}}
+                <li role="separator" class="divider"></li>
+                <li><a href="/take-the-betatest-survey" class="links-footer">Beta Test Feedback Form</a></li>
               </ul>
             </li>
             <li class="dropdown">
