--- a/views/contactus/contact_us.handlebars
+++ b/views/contactus/contact_us.handlebars
@@ -24,14 +24,14 @@
 
         <div class="form-group">
           <label class="col-sm-3 control-label" for="comments">Comments:</label>
-          <div class="col-sm-10">
+          <div class="col-xs-12 col-sm-10">
             <textarea rows="4" cols="40" name="content" placeholder="Your Message..."></textarea>
           </div>
         </div>
         <div class="form-group">
         <label class="col-sm-7 control-label" for="submit"></label>
 
-          <div class="col-sm-10">
+          <div class="col-xs-12 col-sm-10">
             <input type="submit" id="main-btn" value="Submit" />
           </div>
         </div>
