--- a/views/account/support.handlebars
+++ b/views/account/support.handlebars
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-lg-6" id="wrap-contact-support-form">
   <h2 id="contact-support-h2">Contact Support</h2>
-  <form id="contact-support-form" class="form-horizontal form-contact-support" action="/contact_us/send" method="POST">
+  <form id="contact-support-form" class="form-horizontal form-contact-support" action="/contact/support" method="POST">
   
     <div class="form-group">
       <label for="name support" class="col-sm-2 control-label">Name</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="namesupport" name="name" placeholder="Enter Your Name">
+        <input type="text" class="form-control" id="namesupport" name="namesupport" placeholder="Enter Your Name">
       </div>
     </div>
     <div class="form-group">
