--- a/views/contactus/contact_us.handlebars
+++ b/views/contactus/contact_us.handlebars
@@ -25,7 +25,7 @@
         <div class="form-group">
           <label class="col-sm-3 control-label" for="comments">Comments:</label>
           <div class="col-xs-12 col-sm-10">
-            <textarea rows="4" cols="40" name="content" placeholder="Your Message..."></textarea>
+            <textarea rows="4" cols="37" name="comments" type="text" placeholder="Your Message..."></textarea>
           </div>
         </div>
         <div class="form-group">
