--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,11 +9,11 @@
              
            </div>
            <div class="col-xs-12 col-sm-8" style="text-align: center">
-           <div class="alert alert-info fade in" style="margin-top: 80px; font-size: 20px">
+           {{!-- <div class="alert alert-info fade in" style="margin-top: 80px; font-size: 20px"> --}}
            {{!-- <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
              <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><strong>      ATTENTION!</strong> This is CESARCELLS Beta. Please <a href="/users/sign_up">SIGNUP</a> to be a beta-tester, then provide feedback      <a href="/take-the-betatest-survey">HERE</a> --}}
 
-           </div>
+           {{!-- </div> --}}
             
              <h1 class="main-h1"> <br><strong id="index-title">Are you looking for a retinal disease treatment?</strong></h1>
               <a href="/users/sign_up" type="submit" class="btn btn-primary" id="yes-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span> Yes</a>
