--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,16 +9,12 @@
              
            </div>
            <div class="col-xs-12 col-sm-8" style="text-align: center">
-           {{!-- <div class="alert alert-info fade in" style="margin-top: 80px; font-size: 20px"> --}}
-           {{!-- <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><strong>      ATTENTION!</strong> This is CESARCELLS Beta. Please <a href="/users/sign_up">SIGNUP</a> to be a beta-tester, then provide feedback      <a href="/take-the-betatest-survey">HERE</a> --}}
-
-           {{!-- </div> --}}
-            
+           
              <h1 class="main-h1"> <br><strong id="index-title">Are you looking for a retinal disease treatment?</strong></h1>
               <a href="/users/sign_up" type="submit" class="btn btn-primary" id="yes-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span> Yes</a>
               <a href="/users/no" type="submit" class="btn btn-primary" id="no-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span> No</a>
              <h1 style="text-align: center" id="sub-main-h1"> Effortlessly qualify for clinical trials. You take a brief assessment. Then you contact the trials. </h1>
+             
            </div>
            <div class="col-xs- col-sm-2">
              
@@ -54,7 +50,7 @@
 
             We have a team of health professionals analyzing the full body of research and clinical trial criteria for you, so you don't have to waste time reading through endless medical documentation. 
              </p> <br>
-             <a class="btn btn-primary btn-lg" href="/about_us/aboutus" role="button" id="learn-more">Learn More About Us</a>
+             <a class="btn btn-primary btn-lg" href="/about_us/aboutus" role="button" id="learn-more">Learn More</a>
              <p class="what-is-sci"><strong>We currently have over 8 ARMD clinical trials.</strong></p>
              {{!-- <img src="/assets/images/clintrial.png" width="30%" style="-webkit-filter: grayscale(100%); filter: grayscale(100%); padding: 10px; margin-bottom: 40px" id="clin-trial-img"></p> --}}
              <span class="glyphicon glyphicon-star" aria-hidden="true">     Trials are derived from: <img src="/assets/images/clintrial.png" width="50%" style="-webkit-filter: grayscale(100%); filter: grayscale(100%); padding: 50px;"></span>
