--- a/views/users/details_new.handlebars
+++ b/views/users/details_new.handlebars
@@ -9,7 +9,7 @@
   
   <div class="form-group">
     <label for="FirstName">First Name</label>
-    <input type="text" name="fname" placeholder="First name" class="form-control" > 
+    <input type="text" name="fname" placeholder="First name" class="form-control" autofocus> 
   </div>
 
   <div class="form-group">
@@ -19,7 +19,7 @@
 
   <div class="form-group">
     <label for="u-age">Age: </label>
-    <input type="number" id="u-age" name="userage" required="true" class="form-control" placeholder="Enter Age" autofocus>
+    <input type="number" id="u-age" name="userage" required="true" class="form-control" placeholder="Enter Age">
   </div>
 
   <div class="form-group">
