--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1377,7 +1377,7 @@ text-align: center;
    border-color: deeppink;
    transition: all 0.3s ease-out;
    margin-bottom: 50px;
-   width: 15%;
+   /*width: 15%;*/
 }
 #sign-in-buddy {
     font-size: 22px;
@@ -1486,7 +1486,7 @@ text-align: center;
     border-width: 5px;
     border-style: solid;
     margin-top: 60px;
-    width: 15%;
+    /*width: 15%;*/
     font-size: 22px;
 }
 #learn-more-how:hover {
@@ -3306,8 +3306,8 @@ header {
     }
     #two3andme-img-index {
         margin-top: 5px;
-        width: 10px;
-        height: 10px;
+        width: 70%;
+        height: 70%;
         
     }
     #main-btn-register-now {
