--- a/views/tools/genetic_report.handlebars
+++ b/views/tools/genetic_report.handlebars
@@ -22,7 +22,7 @@
   {{/each}}
   <div class="row">
     <div class="col-md-12" id="wrap-23-btn">
-      <a id="twothree-btn" href="/auth"><img src="/assets/images/23andMe.png"/> </a>
+      <a id="twothree-btn" href="/auth" target="_blank"><img src="/assets/images/23andMe.png"/> </a>
     </div>
   </div>
 </div>
