--- a/views/aboutus/aboutus.handlebars
+++ b/views/aboutus/aboutus.handlebars
@@ -58,7 +58,7 @@
               </div>
           </div>
           <a href="#" class="modal-trigger" data-toggle="modal" 
-          data-target="#pavanModal">Pavan KatePelli
+          data-target="#pavanModal">Pavan Katepalli
           <br>
           <span class="job-title">Advisor, Full Stack Developer/Tech Entrepreneur</span>
           </a> <br><br>
@@ -70,7 +70,7 @@
                     <h4 class="modal-title" id="myModalLabel">Leadership:</h4>
                     </div>
                     <div class="modal-body">
-                        <h2 style="text-align: left">Pavan Katepelli</h2>
+                        <h2 style="text-align: left">Pavan Katepalli</h2>
                         <span>Technical and Business Advisor</span> <br>
                         <br>
                         <p>Pavan has been with CesarCells since the beginning, and has more than 5 years of experience in Web and Mobile App development. He was the Founder of INRTracker.com, software developer at Mediamath, and instructor at Barnard college and General Assembly. He is currently Chief Learning Officer at Trilogy Education Services. Pavan holds a B.S. in Mathematics from Rutgers University and is a self taught programmer.</p>
