--- a/views/aboutus/aboutus.handlebars
+++ b/views/aboutus/aboutus.handlebars
@@ -41,7 +41,7 @@
               <div class="modal-dialog modal-lg">
                   <div class="modal-content">
                     <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&amp;times;</button>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
                     <h4 class="modal-title" id="myModalLabel">Leadership:</h4>
                     </div>
                     <div class="modal-body">
@@ -66,7 +66,7 @@
               <div class="modal-dialog modal-lg">
                   <div class="modal-content">
                     <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&amp;times;</button>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
                     <h4 class="modal-title" id="myModalLabel">Leadership:</h4>
                     </div>
                     <div class="modal-body">
@@ -91,7 +91,7 @@
               <div class="modal-dialog modal-lg">
                   <div class="modal-content">
                     <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&amp;times;</button>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
                     <h4 class="modal-title" id="myModalLabel">Leadership:</h4>
                     </div>
                     <div class="modal-body">
