--- a/views/layouts/dash.handlebars
+++ b/views/layouts/dash.handlebars
@@ -37,8 +37,7 @@
     <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
     <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
       
-    <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    {{!-- <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script> --}}
 
 
 {{!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.12.3.js"></script> --}}
