--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,7 +78,7 @@ h3 {
     /* The image used */ 
 
     /*background-image: url("http://feelgrafix.com/data_images/out/28/1008780-doctor.jpg");*/
-    background-image: url("/assets/images/pixel-photos.jpg");
+    /*background-image: url("/assets/images/pixel-photos.jpg");*/
 
     /* Set a specific height */
     height: 100%;
